--- a/day24/styles/style.css
+++ b/day24/styles/style.css
@@ -1,6 +1,4 @@
-body{
-          background-color: rgb(57, 57, 57);
-}
+ @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Lobster&family=PT+Serif:ital,wght@1,700&family=Pacifico&family=Poppins:ital,wght@0,500;0,600;1,400&family=Rubik+Bubbles&family=Sevillana&family=Seymour+One&display=swap');
 
 #container{
           position: absolute;
@@ -22,32 +20,34 @@ body{
           background-repeat: no-repeat;
           background-position: right;
           background-attachment: local;
+
 }
 
 #container #header nav{
           position: absolute;
           left: 0;
           top: 0;
-          height: 15%;
+          height: 18%;
           width: 65%;
-          background-color: rgb(67, 84, 37);
+          background-color: rgba(67, 84, 37, 0.859);
           display: flex;
           justify-content: start;
           place-items: center;
           flex-direction: row;
-
 }
 
 #container #header nav #nav-website-logo{
-          width: 100%;
-          height: 100%;
+          width: 20%;
+          height: 90%;
           background-image: url(../wallpaper/icons8-internet-100.png) ;
-          background-repeat: no-repeat;         
+          background-repeat: no-repeat;
+            
+          
 }
 
 #container #header nav #nav-buttons{
           width: 75%;
-          height: 50%;
+          height: 20%;
           display: flex;
           justify-content: end;
           place-items: end;
@@ -56,8 +56,8 @@ body{
 }
 
 #container #header nav #nav-buttons input{
-          width: 40%;
-          margin: 10px;
-          border-radius: 6px;
+          width: 25%;
+          margin: 5px;
+          border-radius: 7px;
           text-align: center;
 }
