--- a/day24/styles/style.css
+++ b/day24/styles/style.css
@@ -1,4 +1,6 @@
- @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Lobster&family=PT+Serif:ital,wght@1,700&family=Pacifico&family=Poppins:ital,wght@0,500;0,600;1,400&family=Rubik+Bubbles&family=Sevillana&family=Seymour+One&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap');
+
 
 #container{
           position: absolute;
@@ -29,7 +31,7 @@
           top: 0;
           height: 18%;
           width: 65%;
-          background-color: rgba(67, 84, 37, 0.859);
+          background-color: rgba(56, 67, 37, 0.859);
           display: flex;
           justify-content: start;
           place-items: center;
@@ -37,27 +39,29 @@
 }
 
 #container #header nav #nav-website-logo{
-          width: 20%;
+          width: 100%;
           height: 90%;
           background-image: url(../wallpaper/icons8-internet-100.png) ;
           background-repeat: no-repeat;
+          margin-left: 5px;
+          
             
           
 }
 
-#container #header nav #nav-buttons{
-          width: 75%;
-          height: 20%;
-          display: flex;
-          justify-content: end;
-          place-items: end;
-          flex-grow: inherit;
+#container #header nav #nav-website-logo  #nav-name-header span{
+         font-family: 'Mochiy Pop One', sans-serif;
+         font-size: 15px;
+         color: rgba(255, 255, 255, 0.924);
+}
+
+ #container #header nav ul{
+          list-style: none;
+          margin: 0;
+          padding: 0;
 
 }
 
-#container #header nav #nav-buttons input{
-          width: 25%;
-          margin: 5px;
-          border-radius: 7px;
-          text-align: center;
+a{
+          text-decoration: none;
 }
