--- a/day24/styles/style.css
+++ b/day24/styles/style.css
@@ -1,6 +1,10 @@
+body{
+          background-color:rgba(235, 231, 231, 0.976);
+}
 
-@import url('https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Merienda+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
 
 #container{
           position: absolute;
@@ -22,6 +26,9 @@
           background-repeat: no-repeat;
           background-position: right;
           background-attachment: local;
+          display: flex;
+          justify-content: start;
+          place-items: center;
 
 }
 
@@ -31,7 +38,7 @@
           top: 0;
           height: 18%;
           width: 65%;
-          background-color: rgba(56, 67, 37, 0.859);
+          background-color: rgb(107, 131, 70);
           display: flex;
           justify-content: start;
           place-items: center;
@@ -40,28 +47,77 @@
 
 #container #header nav #nav-website-logo{
           width: 100%;
-          height: 90%;
+          height: 95%;
           background-image: url(../wallpaper/icons8-internet-100.png) ;
-          background-repeat: no-repeat;
-          margin-left: 5px;
-          
-            
-          
+          background-repeat: no-repeat;  
 }
+
 
 #container #header nav #nav-website-logo  #nav-name-header span{
-         font-family: 'Mochiy Pop One', sans-serif;
-         font-size: 15px;
-         color: rgba(255, 255, 255, 0.924);
-}
-
- #container #header nav ul{
-          list-style: none;
-          margin: 0;
-          padding: 0;
+          font-family: 'Fredoka One', cursive;
+         font-size:  14px;
+         color: rgb(255, 255, 255);
+         margin-left: 4px;
+         cursor: pointer;
 
 }
 
-a{
-          text-decoration: none;
+#nav-buttons{
+          height: 30%;
+          width: 40%;
+
+}
+
+#container #header nav div{
+          display: flex;
+          justify-content: start;
+          place-items: end;
+          flex-direction: row;
+}
+
+#container #header nav #nav-website-logo span::selection{
+          background-color: transparent;
+}
+
+#container #header nav #nav-buttons input{
+          border-radius: 9px;
+          border-color: rgb(57, 54, 54);
+          margin-right: 10px;
+          background-color: rgb(237, 231, 231);
+          color: rgb(18, 68, 220);
+          font-size:medium;
+          font-family: 'Fredoka One', cursive;
+          cursor: pointer;
+}
+
+#header-content{
+          position: relative;
+          width: 400px;
+          height: max-content;
+          margin-left: 235px;
+          margin-top: 10px;
+          color: rgb(0, 81, 201);
+          display: flex;
+          justify-content: start;
+          place-items: center;
+          flex-direction: column;
+          
+}
+
+#header-content h1{
+          text-align: center;
+          color: rgb(6, 6, 6);
+}
+
+#header-content p{
+          text-align: center;
+          font-family: 'Pacifico', cursive;
+          color: rgb(189, 89, 18);
+          font-size: medium;
+}
+
+#header-content h3{
+          text-align: center;
+          color: darkgreen;
+          
 }
