Update style.css file

--- a/day24/styles/style.css
+++ b/day24/styles/style.css
@@ -1,6 +1,10 @@
 body{
-          background: rgb(0, 0, 0);
+          background-color:rgba(235, 231, 231, 0.976);
 }
+
+
+@import url('https://fonts.googleapis.com/css2?family=Merienda+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
 
 #container{
           position: absolute;
@@ -17,22 +21,103 @@ body{
           height: 100vh;
           left: 0;
           top: 0;
-          background-size: 480px;
+          background-size: 478px;
           background-image: url(../wallpaper/web.JPG);
           background-repeat: no-repeat;
           background-position: right;
           background-attachment: local;
+          display: flex;
+          justify-content: start;
+          place-items: center;
+
 }
 
 #container #header nav{
           position: absolute;
           left: 0;
           top: 0;
-          height: 8%;
-          width: 100%;
-          background-color: rgb(255, 255, 255);
+          height: 18%;
+          width: 65%;
+          background-color: rgb(107, 131, 70);
           display: flex;
           justify-content: start;
           place-items: center;
           flex-direction: row;
+}
+
+#container #header nav #nav-website-logo{
+          width: 100%;
+          height: 95%;
+          background-image: url(../wallpaper/icons8-internet-100.png) ;
+          background-repeat: no-repeat;  
+}
+
+
+#container #header nav #nav-website-logo  #nav-name-header span{
+          font-family: 'Fredoka One', cursive;
+         font-size:  14px;
+         color: rgb(255, 255, 255);
+         margin-left: 4px;
+         cursor: pointer;
+
+}
+
+#nav-buttons{
+          height: 30%;
+          width: 40%;
+
+}
+
+#container #header nav div{
+          display: flex;
+          justify-content: start;
+          place-items: end;
+          flex-direction: row;
+}
+
+#container #header nav #nav-website-logo span::selection{
+          background-color: transparent;
+}
+
+#container #header nav #nav-buttons input{
+          border-radius: 9px;
+          border-color: rgb(57, 54, 54);
+          margin-right: 10px;
+          background-color: rgb(237, 231, 231);
+          color: rgb(18, 68, 220);
+          font-size:medium;
+          font-family: 'Fredoka One', cursive;
+          cursor: pointer;
+}
+
+#header-content{
+          position: relative;
+          width: 400px;
+          height: max-content;
+          margin-left: 235px;
+          margin-top: 10px;
+          color: rgb(0, 81, 201);
+          display: flex;
+          justify-content: start;
+          place-items: center;
+          flex-direction: column;
+          
+}
+
+#header-content h1{
+          text-align: center;
+          color: rgb(6, 6, 6);
+}
+
+#header-content p{
+          text-align: center;
+          font-family: 'Pacifico', cursive;
+          color: rgb(189, 89, 18);
+          font-size: medium;
+}
+
+#header-content h3{
+          text-align: center;
+          color: darkgreen;
+          
 }
