--- a/day24/styles/style.css
+++ b/day24/styles/style.css
@@ -2,9 +2,9 @@ body{
           background-color:rgba(235, 231, 231, 0.976);
 }
 
-
 @import url('https://fonts.googleapis.com/css2?family=Merienda+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
+
 
 #container{
           position: absolute;
@@ -37,7 +37,7 @@ body{
           left: 0;
           top: 0;
           height: 18%;
-          width: 65%;
+          width: 871px;
           background-color: rgb(107, 131, 70);
           display: flex;
           justify-content: start;
@@ -95,7 +95,7 @@ body{
           width: 400px;
           height: max-content;
           margin-left: 235px;
-          margin-top: 10px;
+          margin-top: 65px;
           color: rgb(0, 81, 201);
           display: flex;
           justify-content: start;
@@ -106,13 +106,13 @@ body{
 
 #header-content h1{
           text-align: center;
-          color: rgb(6, 6, 6);
+          color: rgb(38, 38, 38);
 }
 
 #header-content p{
           text-align: center;
           font-family: 'Pacifico', cursive;
-          color: rgb(189, 89, 18);
+          color: rgb(49, 49, 246);
           font-size: medium;
 }
 
@@ -120,4 +120,98 @@ body{
           text-align: center;
           color: darkgreen;
           
+}
+
+#header-content button{
+          border-radius: 15px;
+          background-color: rgb(111, 109, 109);
+          color:whitesmoke;
+          font-size:15px;
+         font-family:'Fredoka One', cursive;
+         transform: 600ms;
+         cursor: pointer;
+}
+
+#header-content button:hover{
+           background-color: rgb(24, 25, 48);
+}
+
+#out-side-text{
+          position: relative;
+          width: 100%;
+          height: 50px;
+          color: rgb(254, 254, 254);
+          background-color: rgb(85, 106, 55);
+          display: flex;
+          justify-content: center;
+          place-items: center;
+          font-size: 30px;
+
+}
+
+#out-side-text span{
+          font-family: 'Fredoka One', cursive;
+}
+
+#services{
+          position: relative;
+          width: 100%;
+          min-height: 300px;
+          display: flex;
+          justify-content: center;
+          place-items: center;
+          gap: 25px;
+}
+
+#services #service{
+          position: relative;
+          width: 200px;
+          height: 250px;
+          border-radius: 25px;
+          background-color:#743a10;
+          display: flex;
+          justify-content: start;
+          place-items: center;
+          flex-direction: column;
+          gap: 30px;
+}
+
+#services #service span{
+          display: flex;
+          justify-content: center;
+          place-items: start;
+          color: whitesmoke;
+          gap: 30px;
+          text-align: center;
+          font-size: 20px;
+          font-weight: bold;
+          cursor: pointer;
+}
+
+#out-site-contect{
+          position: relative;
+          width: 100%;
+          height: 70px;
+          color: rgb(254, 254, 254);
+          background-color: rgb(85, 106, 55);
+          display: flex;
+          justify-content: center;
+          place-items: center;
+          font-size: 30px;
+}
+
+#out-site-contect button{
+          border-radius: 20px;
+          color: rgb(181, 56, 56);
+          font-size: 15px;
+}
+
+#connectes{
+          position: relative;
+          width: 100%;
+          min-height: 100px;
+          display: flex;
+          justify-content: center;
+          place-items: center;
+          gap: 25px;
 }
