--- a/day30/style.css
+++ b/day30/style.css
@@ -1,3 +1,38 @@
 body{
           background-color: black;
+          background-image: url(photo/hero-img_copy.jpg);
+          background-size: cover;
+          background-attachment: fixed;
+}
+
+#container{
+          position: absolute;
+          width: 100%;
+          min-height: 100%;
+          left: 0;
+          top: 0;
+          display: flex;
+          justify-content: center;
+          place-items: center;
+}
+
+#container div{
+          width: 300px;
+          height: 300px;
+          background: rgb(255, 121, 184);
+          overflow: hidden;
+}
+
+#container div div{
+          position: relative;
+          width: 100%;
+          height: 30%;
+          box-sizing: border-box;
+          background: rgb(98, 182, 255);
+          top: 100px;
+          display: flex;
+          justify-content: center;
+          place-items: center;
+          font-size: 20px ;
+          text-align: center;
 }
