--- a/day31/style.css
+++ b/day31/style.css
@@ -1,6 +1,5 @@
 body{
-          background-color: black;
-          background-image: url(photo/hero-img_copy.jpg);
+          background-color: rgb(0, 0, 0);
           background-size: cover;
           background-attachment: fixed;
 }
@@ -19,20 +18,16 @@ body{
 #container div{
           width: 300px;
           height: 300px;
-          background: rgb(255, 121, 184);
+          background: rgb(0, 0, 0);
           overflow: hidden;
 }
 
-#container div div{
+#container input{
           position: relative;
-          width: 100%;
-          height: 30%;
-          box-sizing: border-box;
-          background: rgb(98, 182, 255);
-          top: 100px;
-          display: flex;
-          justify-content: center;
-          place-items: center;
+          padding: 10px 30px 10px 30px;
           font-size: 20px ;
-          text-align: center;
+          caret-color: red;
+          direction: rtl;
+          outline: 3px solid blue;
+          outline-offset: 12px;
 }
