--- a/day44/styles/style.css
+++ b/day44/styles/style.css
@@ -18,10 +18,10 @@ body{
 #container #header{
           position: relative;
           width: 100%;
-          height: 100vh;
+          height: 100%;
           left: 0;
           top: 0;
-          background-size: 478px;
+          background-size: 518px;
           background-image: url(../wallpaper/web.JPG);
           background-repeat: no-repeat;
           background-position: right;
@@ -36,30 +36,29 @@ body{
           position: absolute;
           left: 0;
           top: 0;
-          height: 19%;
+          height: 18%;
           width: 100%;
           background-color: rgb(107, 131, 70);
           display: flex;
-          justify-content: start;
+          justify-content: space-between;
           place-items: center;
-          flex-direction: row;
 }
 
 #container #header nav #nav-website-logo{
-          width: 100%;
-          height: 95%;
+          width: 100px;
+          height: 100%;
           background-image: url(../wallpaper/icons8-internet-100.png) ;
-          background-repeat: no-repeat;  
+          background-repeat: no-repeat; 
+     
 }
 
 
 #container #header nav #nav-website-logo  #nav-name-header span{
-          font-family: 'Fredoka One', cursive;
+         font-family: 'Fredoka One', cursive;
          font-size: 10px;
          color: rgb(255, 255, 255);
-         margin-left: 10px;
          cursor: pointer;
-
+         margin-top: 94px;
 }
 
 #nav-buttons{
@@ -70,8 +69,8 @@ body{
 
 #container #header nav div{
           display: flex;
-          justify-content: start;
-          place-items: end;
+          justify-content: end;
+          place-items: start;
           flex-direction: row;
 }
 
@@ -92,30 +91,32 @@ body{
 
 #header-content{
           position: relative;
-          width: 50%;
-          height: 60%;
-          margin-top: 65px;
+          width: 40%;
+          height: 50%;
           color: rgb(0, 81, 201);
           display: flex;
-          justify-content: start;
+          justify-content:center ;
           place-items: center;
           flex-direction: column;
+          text-align: center;
           
 }
 
-#header-content h1{
+#header-content h2{
+          margin-left: 20px;
           text-align: center;
           color: rgb(38, 38, 38);
 }
 
 #header-content p{
+          margin-right: 5px;
           text-align: center;
           font-family: 'Pacifico', cursive;
           color: rgb(49, 49, 246);
-          font-size: medium;
+          font-size: 12px;
 }
 
-#header-content h3{
+#header-content h4{
           text-align: center;
           color: darkgreen;
           
@@ -213,8 +214,4 @@ body{
           justify-content: center;
           place-items: center;
           gap: 25px;
-}
-
-@media only screen  and (max-width:1600px){
-          
 }
