--- a/day45/style.css
+++ b/day45/style.css
@@ -16,7 +16,7 @@ header{
           top: 0;
           width: 100%;
           min-height: 100%;
-          background: black;
+          background: rgb(74, 74, 74);
           display: flex;
           justify-content: end;
           gap: 60px;
@@ -38,7 +38,8 @@ header{
           display: flex;
           justify-content: start;
           place-items: center;
-          gap: 10px ;
+          gap: 5px ;
+
 }
 #left img{
           width: 120px;
@@ -73,68 +74,53 @@ main div{
           margin-top: 30px;
 }
 
-@media  only screen and (max-width: 1000px) {
+@media  only screen and (max-width:536px) {
+          main{
+                    flex-direction: column;
+          }
+
+          main div{
+                    width: 80%;
+                    height: 350px;
+          }
+         
           
           header{
                     position: relative;
-                    left: 0;
-                    top: 0;
                     width: 100%;
-                    min-height: 100%;
-                    background: black;
+                    height: max-content;
+                    background: rgb(109, 107, 107);
                     display: flex;
-                    justify-content: end;
-                    gap: 60px;
-                    place-items: center;
+                    flex-direction: column;
           }
           
           #right ,#left{
                     position: relative;
-                    width: 50%;
+                    width: 100%;
                     height: 100%;
           }
-          
+
           #right{
                     display: flex;
+                    flex-direction: column;
                     justify-content: space-around;
                     place-items: center;
           }
+          
           #left{
-                    display: flex;
-                    justify-content: start;
-                    place-items: center;
-                    gap: 10px ;
-          }
-          #left img{
-                    width: 120px;
-                    padding: 5px 10px ;
-                    border-radius: 20px;
+                    display: none;
+                    
           }
           
           a{
+                    width: 100%;
+                    height: 50px;
                     color: aliceblue;
                     font-family: sans-serif;
                     text-decoration: none;
-          }
-          
-          main{
-                    position: relative;
-                    width: 100%;
-                    min-height: 500px;
                     display: flex;
-                    justify-content: center;
+                    justify-content: space-around;
                     place-items: center;
-                    flex-direction: row;
-                    /*flex-wrap: wrap;*/
-                    gap: 30px;
-          }
-          
-          main div{
-                    position: relative;
-                    background: rgb(71, 91, 188);
-                    border-radius: 10px;
-                    height: 300px;
-                    width: 450px;
-                    margin-top: 30px;
+                    border-bottom: 2px solid black;
           }
 }
