--- a/day44/styles/style.css
+++ b/day44/styles/style.css
@@ -215,3 +215,113 @@ body{
           place-items: center;
           gap: 25px;
 }
+
+@media only screen and (max-width:470px) {
+          #container #header{
+                    display: block;
+                    background-image: none;
+                    height: 400px;
+                    margin-bottom: 30%;
+          }
+          #container #header nav{
+                    background: rgb(46, 69, 0);
+                    position: relative;
+                    top: 0;
+                    left: 0;
+                    height: max-content;
+                    
+          }
+          #container #header nav #nav-website-logo{
+                    display: none;
+          }
+          #container #header nav #nav-website-logo #nav-name-header span{
+                    display: none;
+          }
+          #container #header nav #nav-buttons{
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    place-items: center;
+                    text-align: center;
+                    width: 100%;
+                    gap: 0;
+          }
+          #container #header nav #nav-buttons a{
+                    font-size: 1.5vh;
+                    text-align: center;
+                    padding: 8px 0px;
+                    border-bottom: 1px solid rgb(185, 180, 180);
+          }
+          #header-content{
+                    position: relative;
+                    width: 100%;
+                    height: 100%;
+                    color: rgb(0, 81, 201);
+                    display: flex;
+                    justify-content:center ;
+                    place-items: center;
+                    flex-direction: column;
+                    text-align: center;
+                    
+                    
+          }
+          
+          #header-content h2{
+                    margin-left: 20px;
+                    text-align: center;
+                    color: rgb(0, 0, 0);
+                    font-size: 5vw;
+                    
+          }
+          
+          #header-content p{
+                    margin-right: 5px;
+                    text-align: center;
+                    font-family: 'Pacifico', cursive;
+                    color: rgb(23, 25, 121);
+                    font-size: 3vw;
+                    
+          }
+          
+          #header-content h4{
+                    text-align: center;
+                    color: rgb(35, 62, 33);
+                    font-size: 3vw;
+                    text-align: center;
+                    padding: 0px 10px;
+                    
+          }
+          #header-content button{
+                    font-size: 3vw;
+          }
+          #out-side-text{
+                    height: 55px;
+          }
+          #out-side-text span{
+                    font-size: 12px;
+               
+          }
+          #services  {
+                    padding: 10px 0px;
+                    gap: 5px;
+                    flex-wrap: wrap;
+          }
+          #services #service{
+                    width: 150px;
+                    height: 200px;
+          }
+          
+          #services #service span{
+                    text-align: center;
+                    font-size: 15px;
+          }
+          #out-site-contect button{
+                    text-align: center;
+                    font-size: 3vw;
+          } 
+          #connectes{
+                    font-size: 1.5vw;
+                    gap: 1.2vw;
+                    cursor: pointer;
+          }
+}
